trying to fix the blur on firefox

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -31,8 +31,8 @@
     color: transparent;
     height: 100%;
     padding: 20px;
-    backdrop-filter: blur(0px);
-    backdrop-filter: grayscale(100%);
+    //backdrop-filter: blur(0px);
+    //backdrop-filter: grayscale(100%);
     // backdrop-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
     transition: all 0.3s ease-in-out;
     display: flex;
@@ -66,14 +66,14 @@
   }
   &:hover .card-info {
     // filter: blur(10px);
-    backdrop-filter: blur(10px);
+   /* backdrop-filter: blur(10px);
     // filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     -moz-backdrop-filter: blur(10px);
     -o-backdrop-filter: blur(10px);
     -ms-backdrop-filter: blur(10px);
     backdrop-filter: url(#blur);
-    backdrop-filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='10');
+    backdrop-filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='10');*/
     // color: white;
   }
   &:hover .info{
@@ -110,7 +110,7 @@
     color: transparent;
     height: 100%;
     padding: 20px;
-    backdrop-filter: blur(0px);
+    /*backdrop-filter: blur(0px);
     backdrop-filter: blur(0px);
       filter: blur(0px);
       -webkit-filter: blur(0px);
@@ -119,7 +119,7 @@
       -ms-filter: blur(0px);
       filter: url(#blur);
       // filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='0');
-    backdrop-filter: grayscale(100%);
+    backdrop-filter: grayscale(100%);*/
     // filter: grayscale(100%);
     transition: all 0.3s ease-in-out;
     display: flex;
@@ -148,7 +148,7 @@
 
   &:hover .card-info {
     // filter: blur(10px);
-    backdrop-filter: blur(10px);
+    //backdrop-filter: blur(10px);
   }
 
   &:hover .info {
@@ -184,9 +184,9 @@
     color: transparent;
     height: 100%;
     padding: 20px;
-    backdrop-filter: blur(0px);
+    //backdrop-filter: blur(0px);
     // filter: blur(0px);
-    backdrop-filter: grayscale(100%);
+    //backdrop-filter: grayscale(100%);
     // filter: grayscale(100%);
     transition: all 0.3s ease-in-out;
     display: flex;
@@ -213,7 +213,7 @@
   }
   &:hover .card-info {
     // filter: blur(10px);
-    backdrop-filter: blur(10px);
+    //backdrop-filter: blur(10px);
     & a {
       display: block;
       color: white;
@@ -419,8 +419,8 @@
       color: transparent;
       height: 100%;
       padding: 20px;
-      backdrop-filter: blur(0px);
-      backdrop-filter: grayscale(100%);
+      //backdrop-filter: blur(0px);
+      //backdrop-filter: grayscale(100%);
       transition: all 0.3s ease-in-out;
       display: flex;
       flex-direction: column;
@@ -443,7 +443,7 @@
     }
     &:hover .card-info {
       // filter: blur(10px);
-      backdrop-filter: blur(10px);
+      //backdrop-filter: blur(10px);
     }
     &:hover .info{
       color: white;
